fixed window background overlap

--- a/style.css
+++ b/style.css
@@ -163,5 +163,5 @@ nav a:hover, header a:hover {
 }
 
 .stuff-page {
-  height: 250vh;
+  height: 255vh;
 }
